# internal/adapters/http/docs/swagger.json
@@ -1939,23 +1939,50 @@
                 }
             }
         },
+        "dto.RequestAPIKeyResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "key": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.RequestEnvironmentResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.RequestProjectResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.RequestResponse": {
             "type": "object",
             "properties": {
                 "api_key": {
-                    "type": "string"
-                },
-                "api_key_id": {
-                    "type": "integer"
+                    "$ref": "#/definitions/dto.RequestAPIKeyResponse"
                 },
                 "created_at": {
                     "type": "string"
                 },
-                "environment_id": {
-                    "type": "integer"
-                },
-                "environment_name": {
-                    "type": "string"
+                "environment": {
+                    "$ref": "#/definitions/dto.RequestEnvironmentResponse"
                 },
                 "execution_status": {
                     "type": "string",
@@ -1980,29 +2007,34 @@
                 "path": {
                     "type": "string"
                 },
-                "project_id": {
-                    "type": "integer"
-                },
-                "project_name": {
-                    "type": "string"
+                "project": {
+                    "$ref": "#/definitions/dto.RequestProjectResponse"
                 },
                 "request_time": {
                     "type": "string"
                 },
-                "service_id": {
-                    "type": "integer"
-                },
-                "service_name": {
-                    "type": "string"
-                },
-                "service_version": {
-                    "type": "string"
+                "service": {
+                    "$ref": "#/definitions/dto.RequestServiceResponse"
                 },
                 "start_point": {
                     "type": "string"
                 },
                 "status_code": {
                     "type": "integer"
+                }
+            }
+        },
+        "dto.RequestServiceResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "version": {
+                    "type": "string"
                 }
             }
         },
