# internal/adapters/http/dto/request.go
@@ -25,40 +25,64 @@ func (r *RequestFilter) ToDomain() *dto.RequestFilter {
 
 // ... Responses ...
 
+type RequestAPIKeyResponse struct {
+	ID  int    `name:"id"`
+	Key string `name:"key"`
+}
+
+type RequestServiceResponse struct {
+	ID      int    `name:"id"`
+	Name    string `name:"name"`
+	Version string `name:"version"`
+}
+
+type RequestEnvironmentResponse struct {
+	ID   int    `name:"id"`
+	Name string `name:"name"`
+}
+
+type RequestProjectResponse struct {
+	ID   int    `name:"id"`
+	Name string `name:"name"`
+}
+
 type RequestResponse struct {
-	ID              string    `json:"id"`
-	StartPoint      string    `json:"start_point"`
-	APIKey          string    `json:"api_key"`
-	APIKeyID        int       `json:"api_key_id"`
-	ProjectName     string    `json:"project_name"`
-	ProjectID       int       `json:"project_id"`
-	EnvironmentName string    `json:"environment_name"`
-	EnvironmentID   int       `json:"environment_id"`
-	ServiceName     string    `json:"service_name"`
-	ServiceVersion  string    `json:"service_version"`
-	ServiceID       int       `json:"service_id"`
-	StatusCode      int       `json:"status_code"`
-	ExecutionStatus string    `json:"execution_status" enums:"success,forwarded,client_error,service_error,unauthorized,quota_exceeded"`
-	RequestTime     time.Time `json:"request_time"`
-	Path            string    `json:"path"`
-	Method          string    `json:"method"`
-	IPAddress       string    `json:"ip_address"`
-	CreateAt        time.Time `json:"created_at"`
+	ID              string                      `json:"id"`
+	StartPoint      string                      `json:"start_point"`
+	APIKey          *RequestAPIKeyResponse      `json:"api_key"`
+	Project         *RequestProjectResponse     `json:"project"`
+	Environment     *RequestEnvironmentResponse `json:"environment"`
+	Service         *RequestServiceResponse     `json:"service"`
+	StatusCode      int                         `json:"status_code"`
+	ExecutionStatus string                      `json:"execution_status" enums:"success,forwarded,client_error,service_error,unauthorized,quota_exceeded"`
+	RequestTime     time.Time                   `json:"request_time"`
+	Path            string                      `json:"path"`
+	Method          string                      `json:"method"`
+	IPAddress       string                      `json:"ip_address"`
+	CreateAt        time.Time                   `json:"created_at"`
 }
 
 func RequestResponseFromDomain(request *dto.RequestResponse) *RequestResponse {
 	return &RequestResponse{
-		ID:              request.ID,
-		StartPoint:      request.StartPoint,
-		APIKey:          request.APIKey,
-		APIKeyID:        request.APIKeyID,
-		ProjectName:     request.ProjectName,
-		ProjectID:       request.ProjectID,
-		EnvironmentName: request.EnvironmentName,
-		EnvironmentID:   request.EnvironmentID,
-		ServiceName:     request.ServiceName,
-		ServiceVersion:  request.ServiceVersion,
-		ServiceID:       request.ServiceID,
+		ID:         request.ID,
+		StartPoint: request.StartPoint,
+		APIKey: &RequestAPIKeyResponse{
+			ID:  request.APIKey.ID,
+			Key: request.APIKey.Key,
+		},
+		Project: &RequestProjectResponse{
+			ID:   request.Project.ID,
+			Name: request.Project.Name,
+		},
+		Environment: &RequestEnvironmentResponse{
+			ID:   request.Environment.ID,
+			Name: request.Environment.Name,
+		},
+		Service: &RequestServiceResponse{
+			ID:      request.Service.ID,
+			Name:    request.Service.Name,
+			Version: request.Service.Version,
+		},
 		StatusCode:      request.StatusCode,
 		ExecutionStatus: string(request.ExecutionStatus),
 		RequestTime:     request.RequestTime,
